@@ -1,7 +1,7 @@
 /**
  * ContainerProxy
  *
- * Copyright (C) 2016-2023 Open Analytics
+ * Copyright (C) 2016-2024 Open Analytics
  *
  * ===========================================================================
  *
@@ -34,24 +34,32 @@ import lombok.Setter;
 
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @EqualsAndHashCode(callSuper = true)
 @Data
 @Setter
 @Getter
 @Builder(toBuilder = true)
-@AllArgsConstructor
+@AllArgsConstructor(access = AccessLevel.PRIVATE) // force Spring to not use constructor
 @NoArgsConstructor(force = true, access = AccessLevel.PRIVATE) // Jackson deserialize compatibility
 public class KubernetesSpecExtension extends AbstractSpecExtension {
 
     String kubernetesPodPatches;
 
     @Builder.Default
+    List<AuthorizedPodPatches> kubernetesAuthorizedPodPatches = new ArrayList<>();
+
+    @Builder.Default
     List<String> kubernetesAdditionalManifests = new ArrayList<>();
 
     @Builder.Default
+    List<AuthorizedAdditionalManifests> kubernetesAuthorizedAdditionalManifests = new ArrayList<>();
+
+    @Builder.Default
     List<String> kubernetesAdditionalPersistentManifests = new ArrayList<>();
+
+    @Builder.Default
+    List<AuthorizedAdditionalManifests> kubernetesAuthorizedAdditionalPersistentManifests = new ArrayList<>();
 
     @Override
     public KubernetesSpecExtension firstResolve(SpecExpressionResolver resolver, SpecExpressionContext context) {
@@ -61,10 +69,13 @@ public class KubernetesSpecExtension extends AbstractSpecExtension {
     @Override
     public KubernetesSpecExtension finalResolve(SpecExpressionResolver resolver, SpecExpressionContext context) {
         return toBuilder()
-                .kubernetesAdditionalManifests(kubernetesAdditionalManifests.stream().map(m -> resolver.evaluateToString(m, context)).collect(Collectors.toList()))
-                .kubernetesAdditionalPersistentManifests(kubernetesAdditionalPersistentManifests.stream().map(m -> resolver.evaluateToString(m, context)).collect(Collectors.toList()))
-                .kubernetesPodPatches(resolver.evaluateToString(kubernetesPodPatches, context))
-                .build();
+            .kubernetesAdditionalManifests(kubernetesAdditionalManifests.stream().map(m -> resolver.evaluateToString(m, context)).toList())
+            .kubernetesAdditionalPersistentManifests(kubernetesAdditionalPersistentManifests.stream().map(m -> resolver.evaluateToString(m, context)).toList())
+            .kubernetesPodPatches(resolver.evaluateToString(kubernetesPodPatches, context))
+            .kubernetesAuthorizedPodPatches(kubernetesAuthorizedPodPatches.stream().map(m -> m.finalResolve(resolver, context)).toList())
+            .kubernetesAuthorizedAdditionalManifests(kubernetesAuthorizedAdditionalManifests.stream().map(m -> m.finalResolve(resolver, context)).toList())
+            .kubernetesAuthorizedAdditionalPersistentManifests(kubernetesAuthorizedAdditionalPersistentManifests.stream().map(m -> m.finalResolve(resolver, context)).toList())
+            .build();
     }
 
 }
