@@ -1,7 +1,7 @@
 /**
  * ContainerProxy
  *
- * Copyright (C) 2016-2023 Open Analytics
+ * Copyright (C) 2016-2024 Open Analytics
  *
  * ===========================================================================
  *
@@ -22,13 +22,13 @@ package eu.openanalytics.containerproxy.service;
 
 import com.fasterxml.jackson.databind.ObjectMapper;
 import eu.openanalytics.containerproxy.model.runtime.AllowedParametersForUser;
-import eu.openanalytics.containerproxy.model.runtime.ParameterValues;
 import eu.openanalytics.containerproxy.model.runtime.ParameterNames;
+import eu.openanalytics.containerproxy.model.runtime.ParameterValues;
 import eu.openanalytics.containerproxy.model.spec.ParameterDefinition;
 import eu.openanalytics.containerproxy.model.spec.Parameters;
 import eu.openanalytics.containerproxy.model.spec.ProxySpec;
 import eu.openanalytics.containerproxy.spec.IProxySpecProvider;
-import org.apache.commons.lang.StringUtils;
+import org.apache.commons.lang3.StringUtils;
 import org.springframework.data.util.Pair;
 import org.springframework.security.core.Authentication;
 import org.springframework.stereotype.Service;
@@ -44,16 +44,13 @@ import java.util.Objects;
 import java.util.Optional;
 import java.util.Set;
 import java.util.regex.Pattern;
-import java.util.stream.Collectors;
 
 @Service
 public class ParametersService {
 
-    private final IProxySpecProvider baseSpecProvider;
-
-    private final AccessControlEvaluationService accessControlEvaluationService;
-
     private static final Pattern PARAMETER_ID_PATTERN = Pattern.compile("[a-zA-Z\\d_-]*");
+    private final IProxySpecProvider baseSpecProvider;
+    private final AccessControlEvaluationService accessControlEvaluationService;
 
     public ParametersService(IProxySpecProvider baseSpecProvider, AccessControlEvaluationService accessControlEvaluationService, ObjectMapper objectMapper) {
         this.baseSpecProvider = baseSpecProvider;
@@ -72,11 +69,11 @@ public class ParametersService {
             return;
         }
 
-        if (spec.getParameters().getDefinitions() == null || spec.getParameters().getDefinitions().size() == 0) {
+        if (spec.getParameters().getDefinitions() == null || spec.getParameters().getDefinitions().isEmpty()) {
             throw new IllegalStateException(String.format("Configuration error: error in parameters of spec '%s', no definitions found", spec.getId()));
         }
 
-        if (spec.getParameters().getValueSets() == null || spec.getParameters().getValueSets().size() == 0) {
+        if (spec.getParameters().getValueSets() == null || spec.getParameters().getValueSets().isEmpty()) {
             throw new IllegalStateException(String.format("Configuration error: error in parameters of spec '%s', no value sets found", spec.getId()));
         }
 
@@ -90,7 +87,8 @@ public class ParametersService {
                 throw new IllegalStateException(String.format("Configuration error: error in parameters of spec '%s', error: duplicate parameter id '%s'", spec.getId(), definition.getId()));
             }
             if (!PARAMETER_ID_PATTERN.matcher(definition.getId()).matches()) {
-                throw new IllegalStateException(String.format("Configuration error: error in parameters of spec '%s', error: parameter id '%s' is invalid, id may only exists out of Latin letters, numbers, dash and underscore", spec.getId(), definition.getId()));
+                throw new IllegalStateException(String.format("Configuration error: error in parameters of spec '%s', error: parameter id '%s' is invalid, id may only exists out of Latin letters, numbers, dash and underscore",
+                    spec.getId(), definition.getId()));
             }
             parameterIds.add(definition.getId());
             if (definition.getDisplayName() != null && StringUtils.isBlank(definition.getDisplayName())) {
@@ -102,7 +100,7 @@ public class ParametersService {
         }
 
         // Check that either no defaults are provided or that all parameters has a default value
-        List<String> defaults = spec.getParameters().getDefinitions().stream().map(ParameterDefinition::getDefaultValue).collect(Collectors.toList());
+        List<String> defaults = spec.getParameters().getDefinitions().stream().map(ParameterDefinition::getDefaultValue).toList();
         if (!defaults.stream().allMatch(Objects::isNull) && !defaults.stream().allMatch(Objects::nonNull)) {
             throw new IllegalStateException(String.format("Configuration error: error in parameters of spec '%s', error: not every parameter has a default value. Either define no defaults, or defaults for all parameters.", spec.getId()));
         }
@@ -257,8 +255,8 @@ public class ParametersService {
 
         // 1. check which ValueSets are allowed for this user
         List<Parameters.ValueSet> allowedValueSets = parameters.getValueSets().stream()
-                .filter(v -> accessControlEvaluationService.checkAccess(auth, proxySpec, v.getAccessControl()))
-                .collect(Collectors.toList());
+            .filter(v -> accessControlEvaluationService.checkAccess(auth, proxySpec, v.getAccessControl()))
+            .toList();
 
         // 2. compute a unique (per parameter id) index for every value
         // mapping of parameter id to a mapping of an allowed value and its index
