@@ -1,7 +1,7 @@
 /**
  * ContainerProxy
  *
- * Copyright (C) 2016-2023 Open Analytics
+ * Copyright (C) 2016-2024 Open Analytics
  *
  * ===========================================================================
  *
@@ -20,7 +20,9 @@
  */
 package eu.openanalytics.containerproxy.spec.expression;
 
+import com.fasterxml.jackson.databind.JsonNode;
 import eu.openanalytics.containerproxy.auth.impl.OpenIDAuthenticationBackend;
+import eu.openanalytics.containerproxy.auth.impl.WebServiceAuthenticationBackend;
 import eu.openanalytics.containerproxy.auth.impl.saml.ResponseAuthenticationConverter;
 import eu.openanalytics.containerproxy.model.runtime.Proxy;
 import eu.openanalytics.containerproxy.model.spec.ContainerSpec;
@@ -30,17 +32,15 @@ import lombok.AllArgsConstructor;
 import lombok.Builder;
 import lombok.EqualsAndHashCode;
 import lombok.Value;
-import org.keycloak.KeycloakPrincipal;
 import org.springframework.security.core.Authentication;
 import org.springframework.security.ldap.userdetails.LdapUserDetails;
 
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Value
-@EqualsAndHashCode()
+@EqualsAndHashCode(doNotUseGetters = true)
 @Builder(toBuilder = true)
 @AllArgsConstructor
 public class SpecExpressionContext {
@@ -49,11 +49,44 @@ public class SpecExpressionContext {
     ProxySpec proxySpec;
     Proxy proxy;
     OpenIDAuthenticationBackend.CustomNameOidcUser oidcUser;
-    KeycloakPrincipal keycloakUser;
     ResponseAuthenticationConverter.Saml2AuthenticatedPrincipal samlCredential;
     LdapUserDetails ldapUser;
+    WebServiceAuthenticationBackend.WebServiceUser webServiceUser;
     List<String> groups;
     String userId;
+    JsonNode json;
+
+    public static SpecExpressionContext create(Object... objects) {
+        SpecExpressionContextBuilder builder = SpecExpressionContext.builder();
+        return create(builder, objects);
+    }
+
+    public static SpecExpressionContext create(SpecExpressionContextBuilder builder, Object... objects) {
+        for (Object o : objects) {
+            if (o instanceof ContainerSpec) {
+                builder.containerSpec = (ContainerSpec) o;
+            } else if (o instanceof ProxySpec) {
+                builder.proxySpec = (ProxySpec) o;
+            } else if (o instanceof Proxy) {
+                builder.proxy = (Proxy) o;
+            } else if (o instanceof OpenIDAuthenticationBackend.CustomNameOidcUser) {
+                builder.oidcUser = (OpenIDAuthenticationBackend.CustomNameOidcUser) o;
+            } else if (o instanceof ResponseAuthenticationConverter.Saml2AuthenticatedPrincipal) {
+                builder.samlCredential = (ResponseAuthenticationConverter.Saml2AuthenticatedPrincipal) o;
+            } else if (o instanceof LdapUserDetails) {
+                builder.ldapUser = (LdapUserDetails) o;
+            } else if (o instanceof WebServiceAuthenticationBackend.WebServiceUser) {
+                builder.webServiceUser = (WebServiceAuthenticationBackend.WebServiceUser) o;
+            } else if (o instanceof JsonNode) {
+                builder.json = (JsonNode) o;
+            }
+            if (o instanceof Authentication) {
+                builder.groups = UserService.getGroups((Authentication) o);
+                builder.userId = ((Authentication) o).getName();
+            }
+        }
+        return builder.build();
+    }
 
     /**
      * Convert a {@see String} to a list of strings, by splitting according to the provided regex and trimming each result
@@ -62,7 +95,7 @@ public class SpecExpressionContext {
         if (attribute == null) {
             return Collections.emptyList();
         }
-        return Arrays.stream(attribute.split(regex)).map(String::trim).collect(Collectors.toList());
+        return Arrays.stream(attribute.split(regex)).map(String::trim).toList();
     }
 
     /**
@@ -80,7 +113,7 @@ public class SpecExpressionContext {
         if (attribute == null) {
             return Collections.emptyList();
         }
-        return Arrays.stream(attribute.split(regex)).map(it -> it.trim().toLowerCase()).collect(Collectors.toList());
+        return Arrays.stream(attribute.split(regex)).map(it -> it.trim().toLowerCase()).toList();
     }
 
     /**
@@ -110,36 +143,6 @@ public class SpecExpressionContext {
             return false;
         }
         return Arrays.stream(allowedValues).anyMatch(it -> it.trim().equalsIgnoreCase(attribute.trim()));
-    }
-
-    public static SpecExpressionContext create(Object... objects) {
-        SpecExpressionContextBuilder builder = SpecExpressionContext.builder();
-        return create(builder, objects);
-    }
-
-    public static SpecExpressionContext create(SpecExpressionContextBuilder builder, Object... objects) {
-        for (Object o : objects) {
-            if (o instanceof ContainerSpec) {
-                builder.containerSpec = (ContainerSpec) o;
-            } else if (o instanceof ProxySpec) {
-                builder.proxySpec = (ProxySpec) o;
-            } else if (o instanceof Proxy) {
-                builder.proxy = (Proxy) o;
-            } else if (o instanceof OpenIDAuthenticationBackend.CustomNameOidcUser) {
-                builder.oidcUser = (OpenIDAuthenticationBackend.CustomNameOidcUser) o;
-            } else if (o instanceof KeycloakPrincipal) {
-                builder.keycloakUser = (KeycloakPrincipal) o;
-            } else if (o instanceof ResponseAuthenticationConverter.Saml2AuthenticatedPrincipal) {
-                builder.samlCredential = (ResponseAuthenticationConverter.Saml2AuthenticatedPrincipal) o;
-            } else if (o instanceof LdapUserDetails) {
-                builder.ldapUser = (LdapUserDetails) o;
-            }
-            if (o instanceof Authentication) {
-                builder.groups = UserService.getGroups((Authentication) o);
-                builder.userId = UserService.getUserId(((Authentication) o));
-            }
-        }
-        return builder.build();
     }
 
     public SpecExpressionContext copy(Object... objects) {
